# GG

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml  typescript.yml
.husky/: pre-commit
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/agent/: agents.rs  capabilities.rs  commands.rs  config.rs  conversation.rs  memory.rs  mod.rs  prompt.rs  state.rs  tools.rs
apps/desktop/src-tauri/src/ai/: commands.rs
apps/desktop/src-tauri/src/backup/: commands.rs  mod.rs
apps/desktop/src-tauri/src/data/: commands.rs  dto.rs  state.rs
apps/desktop/src-tauri/src/flapjack/: commands.rs  dto.rs  mod.rs  state.rs
apps/desktop/src-tauri/src/flapjack_server/: commands.rs  mod.rs
apps/desktop/src-tauri/src/inspector/: commands.rs
apps/desktop/src-tauri/src/mcp/: commands.rs  mod.rs  registry.rs
apps/desktop/src-tauri/src/python/: commands.rs  mod.rs
apps/desktop/src-tauri/src/sbol_server/: commands.rs  mod.rs
apps/desktop/src-tauri/src/secrets/: commands.rs  mod.rs  store.rs  types.rs
apps/desktop/src-tauri/src/settings/: commands.rs  mod.rs
apps/desktop/src-tauri/src/skills/: commands.rs  mod.rs
apps/desktop/src-tauri/src/workspace/: history.rs  mod.rs
apps/desktop/src/app/: App.tsx  AppErrorBoundary.tsx  app.css  main.tsx
apps/desktop/src/app/providers/: DesktopProviders.tsx
apps/desktop/src/commands/: CommandPalette.tsx  command-items.ts  command-search.ts  command.types.ts
apps/desktop/src/features/ai/: AiPage.tsx  page.ts
apps/desktop/src/lib/: use-async-resource.ts
apps/desktop/src/pages/: activity-items.ts  page-loader.ts  page-registry.ts  page.types.ts
apps/desktop/src/shell/: ActivityBar.tsx  TopBar.tsx
apps/desktop/src/ui/: README.md  class-name.ts  index.ts
apps/desktop/src/ui/brand/: index.tsx
apps/desktop/src/workbench/: Workbench.tsx  WorkbenchPagePanel.tsx  WorkbenchTab.tsx  ids.ts  layout.ts  theme.ts  useWorkbenchController.ts  workbench.types.ts
crates/bioeng-agent/: Cargo.toml  typeshare.toml
crates/bioeng-agent/bindings/: agent-protocol.ts
crates/bioeng-agent/src/: protocol.rs
crates/bioeng-backup/: Cargo.toml
crates/bioeng-backup/src/: attachments.rs  encryption.rs  engine.rs  errors.rs  manifest.rs  restore.rs  retention.rs  store.rs
crates/bioeng-backup/src/stores/: filesystem.rs
crates/bioeng-data/: Cargo.toml
crates/bioeng-data/src/: backup.rs
crates/bioeng-data/src/ai/: memory.rs  storage.rs  types.rs
crates/bioeng-data/src/database/: inspector.rs  migrations.rs  mod.rs
crates/bioeng-data/src/mcp/: mod.rs  storage.rs
crates/bioeng-data/src/settings/: mod.rs  storage.rs  types.rs
crates/bioeng-pyenv/: Cargo.toml
crates/bioeng-pyenv/src/: bioeng_runner.py  lib.rs
crates/bioeng-python-lsp/: Cargo.toml
crates/bioeng-python-lsp/src/: lib.rs  protocol.rs
crates/bioeng-workspace/: Cargo.toml
crates/bioeng-workspace/src/history/: mod.rs  snapshot.rs  tests.rs  types.rs
crates/gg-agent/: Cargo.toml
crates/gg-agent/src/: client.rs  lib.rs  protocol.rs  stream.rs
crates/gg-backup/: Cargo.toml
crates/gg-backup/src/: attachments.rs  database.rs  encryption.rs  engine.rs  lib.rs  manifest.rs  restore.rs  retention.rs
crates/gg-backup/src/stores/: mod.rs
crates/gg-data/: Cargo.toml
crates/gg-data/src/: backup.rs  lib.rs
crates/gg-data/src/ai/: memory.rs  mod.rs  storage.rs
crates/gg-data/src/database/: inspector.rs  migrations.rs
crates/gg-data/src/mcp/: storage.rs  types.rs
crates/gg-data/src/sbol/: mod.rs  storage.rs
crates/gg-data/src/settings/: types.rs
crates/gg-pyenv/: Cargo.toml
crates/gg-pyenv/src/: gg_runner.py  lib.rs
crates/gg-python-lsp/: Cargo.toml
crates/gg-python-lsp/src/: lib.rs
crates/gg-workspace/: Cargo.toml
crates/gg-workspace/src/: errors.rs  lib.rs
crates/gg-workspace/src/history/: mod.rs  restore.rs  retention.rs  staging.rs  tests.rs
scripts/: codex-setup.sh  fetch-python-runtime.sh  macos-dev-runner.sh  setup-dev-codesign.sh
(+160 files in other folders)
