[package]
name = "bioeng-python-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process", "rt", "sync", "time", "macros"] }
bioeng-pyenv = { path = "../bioeng-pyenv" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
