[package]
name = "gg-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typeshare = "1"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
