[package]
name = "gg-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.2"
rusqlite = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
time = { version = "0.3.37", features = ["formatting", "parsing"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.23.0"
