[package]
name = "bioeng"
version = "0.1.0"
description = "A bioengineering research IDE"
authors = ["you"]
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bioeng_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bioeng-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bioeng-agent = { path = "../../../crates/bioeng-agent" }
bioeng-backup = { path = "../../../crates/bioeng-backup" }
bioeng-data = { path = "../../../crates/bioeng-data" }
bioeng-pyenv = { path = "../../../crates/bioeng-pyenv" }
bioeng-python-lsp = { path = "../../../crates/bioeng-python-lsp" }
bioeng-workspace = { path = "../../../crates/bioeng-workspace" }
sbol-db-core = "0.1.1"
sbol-db-storage = "0.1.1"
sbol-db-sqlite = "0.1.1"
sbol-db-sparql = "0.1.1"
sbol-db-rdf = "0.1.1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
fontdb = "0.23.0"
keyring = "2.3.3"
reqwest = { version = "0.13", features = ["json"] }
rmcp = { version = "1.7", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
time = { version = "0.3.37", features = ["parsing"] }
tokio = { version = "1", features = ["io-util", "net", "process", "rt", "sync", "time"] }
tauri-plugin-fs = { version = "2.5.1", features = ["watch"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
security-framework = "3.7.0"
